moved index in api folder for vercel

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon api/index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
