--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI='mongodb://localhost:27017/todoDb'
+MONGO_URI=mongodb+srv://irtazakhanx2003:cQERJqTWB4UJ3fMz@cluster0.kuu4gbo.mongodb.net/mytododb
 JWT_SECRET=thisismysecretkeyfortodolistbyirtazakhanx2003@gmail.com
